src/objects/inscor__Tool_Assignment1__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Date_Checked_In__c</fullName>
        <label>Date Checked In</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Date_Checked_Out__c</fullName>
        <label>Date Checked Out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>inscor__Employee__c</referenceTo>
        <relationshipLabel>Tool Assignments</relationshipLabel>
        <relationshipName>Tool_Assignments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Inventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.inscor__Part_Master__c</field>
                <operation>equals</operation>
                <valueField>inscor__Inventory_Line__c.inscor__Product__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>inscor__Inventory_Line__c</referenceTo>
        <relationshipLabel>Tool Assignments</relationshipLabel>
        <relationshipName>Tool_Assignments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Last_Calibration_Date__c</fullName>
        <label>Last Calibration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Last_Inspection_Date__c</fullName>
        <label>Last Inspection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Multiply_by_WO_Qty__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Multiplies the Tool Assignment Quantity Requested by the quantity of the kits to be built when this template is applied to a Work Order.</inlineHelpText>
        <label>Multiply by WO Qty?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Next_Calibration_Date__c</fullName>
        <label>Next Calibration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Next_Inspection_Date__c</fullName>
        <label>Next Inspection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Part_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part Master</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Selected Part must be marked as Tool.</errorMessage>
            <filterItems>
                <field>Product2.inscor__Tool__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Tool Assignments</relationshipLabel>
        <relationshipName>Tool_Assignments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Qty_Assigned__c</fullName>
        <label>Qty Assigned</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Requested__c</fullName>
        <label>Quantity Requested</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Reserved__c</fullName>
        <label>Quantity Reserved</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Returned__c</fullName>
        <label>Quantity Returned</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Work_Order_Task__c</fullName>
        <label>Work Order Task</label>
        <referenceTo>inscor__Work_Order_Task__c</referenceTo>
        <relationshipLabel>Tool Assignments</relationshipLabel>
        <relationshipName>Tool_Assignments1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Tool Assignment</label>
    <nameField>
        <displayFormat>TAID-{0}</displayFormat>
        <label>Tool Assignment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tool Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>inscor__Restrict_For_Out_Of_Date_Calib</fullName>
        <active>true</active>
        <description>Restrict Tools Allocations for out of date calibration.</description>
        <errorConditionFormula>(ISNEW() || ISCHANGED(inscor__Date_Checked_Out__c)) &amp;&amp; inscor__Inventory__c != null &amp;&amp; inscor__Inventory__r.inscor__Product__c != null &amp;&amp; 
(inscor__Inventory__r.inscor__Product__r.inscor__Calibration_Required__c == true &amp;&amp; (inscor__Inventory__r.inscor__Next_Calibration_Date__c &lt; TODAY() || ISBLANK(inscor__Inventory__r.inscor__Next_Calibration_Date__c))) ||
(inscor__Inventory__r.inscor__Product__r.inscor__Calibration_Required__c == false &amp;&amp; inscor__Inventory__r.inscor__Next_Calibration_Date__c &lt; TODAY())</errorConditionFormula>
        <errorMessage>Tool cannot be allocated as calibration date has passed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inscor__Restrict_For_Out_Of_Date_Insp</fullName>
        <active>true</active>
        <description>Restrict Tools Allocations for out of date inspection.</description>
        <errorConditionFormula>(ISNEW() || ISCHANGED(inscor__Date_Checked_Out__c)) &amp;&amp; inscor__Inventory__c != null &amp;&amp; inscor__Inventory__r.inscor__Product__c != null &amp;&amp; 
(inscor__Inventory__r.inscor__Product__r.inscor__Inspection_Required__c == true &amp;&amp; (inscor__Inventory__r.inscor__Next_Inspection_Date__c &lt; TODAY() || ISBLANK(inscor__Inventory__r.inscor__Next_Inspection_Date__c))) ||
(inscor__Inventory__r.inscor__Product__r.inscor__Inspection_Required__c == false &amp;&amp; inscor__Inventory__r.inscor__Next_Inspection_Date__c &lt; TODAY())</errorConditionFormula>
        <errorMessage>Tool cannot be allocated as inspection date has passed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inscor__Restrict_For_Out_Of_Date_Insp_Or_Calib</fullName>
        <active>false</active>
        <description>Restrict Tools Allocations for out of date allocations or inspection dates.</description>
        <errorConditionFormula>(ISNEW() || ISCHANGED(inscor__Date_Checked_Out__c)) &amp;&amp; inscor__Inventory__c != null &amp;&amp; inscor__Inventory__r.inscor__Product__c != null &amp;&amp; 
((inscor__Inventory__r.inscor__Product__r.inscor__Inspection_Required__c == true &amp;&amp; (inscor__Inventory__r.inscor__Next_Inspection_Date__c &lt; TODAY() || ISBLANK(inscor__Inventory__r.inscor__Next_Inspection_Date__c))) || 
(inscor__Inventory__r.inscor__Product__r.inscor__Calibration_Required__c == true &amp;&amp; (inscor__Inventory__r.inscor__Next_Calibration_Date__c &lt; TODAY() || ISBLANK(inscor__Inventory__r.inscor__Next_Calibration_Date__c))) || 
(inscor__Inventory__r.inscor__Product__r.inscor__Tool__c != true))</errorConditionFormula>
        <errorMessage>Tool cannot be allocated as either inspection or calibration date has passed or &quot;tool?&quot; is not checked on the part master.</errorMessage>
    </validationRules>
</CustomObject>